2005-10-30  Roland Dreier  <roland@cisco.com>

	* examples/srq_pingpong.c (pp_init_ctx): Create CQ with rx_depth +
	num_qp entries, instead of just rx_depth + 1 entries, because
	there can be one send completion pending for each QP.

2005-10-25  Roland Dreier  <roland@cisco.com>

	* Release version 1.0-rc4.

	* examples/uc_pingpong.c (pp_connect_ctx): Fix QP attribute masks
	used to modify QP to RTR and RTS -- we should not be setting
	RDMA/atomic attributes for UC QPs.  Now that the mthca kernel
	driver bug is fixed, the error is exposed here.

	* examples/rc_pingpong.c, examples/srq_pingpong.c,
	examples/uc_pingpong.c, examples/ud_pingpong.c: Keep track of
	whether send and/or receive is pending.  This avoids failures when
	the remote side receives data and posts a send very quickly, and
	the local side completes the receive before the previous send.
	With the old code, this could result in posting a send before the
	previous send completed, and therefore overrun the send queue.

2005-10-23  Roland Dreier  <roland@cisco.com>

	* src/cmd.c (ibv_cmd_get_context_v2): Correct silly mistake in
	computation of size of buffer for old ABI command: we need to use
	sizeof *cmd instead of sizeof cmd, since cmd is a pointer.

2005-10-21  Roland Dreier  <roland@cisco.com>

	* src/cmd.c (ibv_cmd_post_send, ibv_cmd_post_recv,
	ibv_cmd_post_srq_recv): Correct value that we check write() return
	value against so that we check against the size we actually try to
	write, instead of just sizeof cmd.

2005-10-19  Roland Dreier  <roland@cisco.com>

	* src/cmd.c (ibv_cmd_req_notify_cq): Correct how we pass
	solicited_only flag into the kernel.

2005-10-13  Roland Dreier  <roland@cisco.com>

	* include/infiniband/driver.h, src/cmd.c, src/libibverbs.map: Add
	command functions for calling new kernel commands.

	* include/infiniband/verbs.h: Add qp_type to struct ibv_qp so that
	we know when we're posting a send on a UD QP, and add kernel